@@ -3,6 +3,7 @@ TODO for version 1.0
   for the user - they will be tested during R CMD check anyway
 - Let mkin call mkin_wide_to_long automatically, if observed data are suitably defined
 - Think about what a user would expect from version 1.0
+- Check the chi2 error calculation in mkinerrmin.R. KinGUII does this without iteration
 
 Nice to have:
 - Improve choice of starting parameters, in order to avoid failure of eigenvalue based solutions
