@@ -2,6 +2,7 @@
 
 	* Show the weighting method for residuals in the summary
 	* Correct the output of the data in the case of manual weighting
+	* Implement IRLS assuming different variances for observed variables
 
 
 2013-10-09  Johannes Ranke <jranke@uni-bremen.de> for mkin (0.9-22)
